<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WeixinActivity!</string>
    <string name="app_name">Weixin_demo</string>
    
    <string name="main_title">微信</string>
    <string name="main_contact">通讯录</string>
    <string name="main_addcontact">找朋友</string>
    <string name="main_setting">设置</string>
    <string name="main_empty_conversation">暂无会话信息</string>
    <string name="app_new">new</string>
    <string name="address_multi_select_create">发起会话</string>
    <string name="address_multi_select_delete">删除</string>
    <string name="address_multi_select_opt">多选</string>
    <string name="group_weixin">通讯录</string>
    <string name="scroll_bar_search">搜</string>
    <string name="find_more_friends_title">找朋友</string>
    <string name="settings_title">设置</string>
    <string name="find_friends_by_qrcode">扫描二维码</string>
    <string name="contact_search_title">按号码查找</string>
    <string name="find_friends_by_qq">查看QQ好友</string>
    <string name="find_friends_by_mobile">查看手机通讯录</string>
    <string name="find_friends_by_facebook">查看Facebook好友</string>
    <string name="nearby_friend_title">查看附近的人</string>
    <string name="shake_report_title">摇一摇</string>
    <string name="bottle_beach_title">漂流瓶</string>
    <string name="album_dyna_photo_ui_title">相册动态</string>
    <string name="send_qrcode_to_microblog">“秀”出我的二维码</string>
    <string name="settings_account">个人名片</string>
    <string name="settings_signature_empty">未填写</string>
    <string name="settings_account_info">我的帐号</string>
    <string name="settings_bind_mobile_title">手机通讯录匹配</string>
    <string name="settings_tweibo_open">在名片中展示腾讯微博</string>
    <string name="settings_chatting_bg">聊天背景</string>
    <string name="settings_about_system">通用</string>
    <string name="settings_plugins">系统插件</string>
    <string name="settings_about_blacklist">黑名单</string>
    <string name="settings_about_privacy">隐私</string>
    <string name="settings_system_notice">系统通知</string>
    <string name="settings_traffic_statistic">流量统计</string>
    <string name="settings_market_ratings">去给微信打个分，评价一把</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_about_micromsg">关于微信</string>
    <string name="settings_reset">清空聊天记录</string>
    <string name="settings_logout">退出登录</string>
    <string name="settings_signature">个性签名</string>
</resources>